--- a/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
+++ b/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
@@ -3,13 +3,7 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
-.lnsConfigPanel__addLayerBtn {
-  color: transparentize($euiColorMediumShade, 0.3);
-  // Remove EuiButton's default shadow to make button more subtle
-  // sass-lint:disable-block no-important
-  box-shadow: none !important;
-  border-color: $euiColorLightShade;
-}
+@import '../variables';
 
 //
 // LAYOUT
@@ -140,7 +134,7 @@ $vis-editor-sidebar-min-width: 350px;
   
   .cp__rightHeader, .cp__rightSettings {
     padding: 8px;
-    background-color: #FFF;
+    background-color: transparent;
   }
 
   .cp__rightHeader {
@@ -195,4 +189,11 @@ $vis-editor-sidebar-min-width: 350px;
 
 .color-theme-combo-box-option .euiFlexItem.euiFlexItem--flexGrowZero {
   display: none;
+}
+
+// dark mode
+.explorer-dark {
+  .panel_section, .cp__rightHeader {
+    border-bottom: 1px solid $border-color-on-dark;
+  }
 }
